# cpp-rest-api

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/: YourEndpointFile.cpp  api_endpoint_handler.cpp  image_validator.cpp  image_validator.h  main.cpp
src/utilities/: ImageValidator.cpp  ImageValidator.h
